tests/paczka1/fuzzy1/23416121.err
Error in line 3: ls1K Ay84 30,7
Error in line 1: BhEDD5IaUff S899 61,9
Error in line 24: oxii2WF S163 84,9
Error in line 26: oxii2WF S899 68,2
Error in line 31: ls1K A805 96,0
